
        Was working on revamping the checkWalls() to instead just teleport the entites to the opposite wall.
            -WILL cause collision problems?

    Entity.java
        playerInfluencedMovement() has its hitbox.setLocation removed as damn its bad, so bad.
            Changed it into accessing the x and y positions of the hitbox.

    Game.java
        Had a mental breakdown, and somehwat fixed the People vs People collision check.

    InvisWall.Java
        Mdae it so each of the four walls has it's own type (String) that would tell me what wall is being collided and what wall to teleport thr entity to.

    People.java
        setlocation is nuked, no longer there.

    Spawner.java
        I am paranoid about referencing the memory location rather than the number, so I jsut used an acessor method when creating people.
            Also made the collision detect check in reverse.



Current date: 6/025/2022

    CircleField.java
        Was working on it, but didn't want to finish it because of time restraints.

    CollsionDetect.java
        Was working on making wall collision teleport the entities, but I figured it would take atleast 2-3 days.

    Entity.java
        Re-did the draw methods, so that it no longer looked bad. (The game)

        Moved the movement methods into entity, because I figured it was pointless to keep them locked to the individual entity classes.

        Finished the player dependant movment.

    Game.java
        Re-did people.movement, because of the entity method change.

        Commented out spawner and a couple of the People constructors because of debugging.

    Item.java
        Did the same visual revamp as I did in entity.

        Also removed cooldownSeconds, because I want to change the cooldownFrames depending on the type of item.

    People.java
        Removed the movement method and added it into the entity class.

    